crates/aura-macros/tests/boundaries/authoritative_source_missing_kind.rs
#[aura_macros::authoritative_source]
async fn missing_kind() {}

fn main() {}
